# cookiecutter-python-poetry-basic

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/tests/: test_pytest.py
